packagelon com.twittelonr.homelon_mixelonr.modulelon

import com.googlelon.injelonct.Providelons
import com.twittelonr.convelonrsions.DurationOps._
import com.twittelonr.convelonrsions.PelonrcelonntOps._
import com.twittelonr.finaglelon.mtls.authelonntication.SelonrvicelonIdelonntifielonr
import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.finaglelon.thrift.ClielonntId
import com.twittelonr.graph_felonaturelon_selonrvicelon.{thriftscala => gfs}
import com.twittelonr.homelon_mixelonr.param.HomelonMixelonrInjelonctionNamelons.elonarlybirdRelonpository
import com.twittelonr.homelon_mixelonr.param.HomelonMixelonrInjelonctionNamelons.GraphTwoHopRelonpository
import com.twittelonr.homelon_mixelonr.param.HomelonMixelonrInjelonctionNamelons.IntelonrelonstsThriftSelonrvicelonClielonnt
import com.twittelonr.homelon_mixelonr.param.HomelonMixelonrInjelonctionNamelons.TwelonelontypielonContelonntRelonpository
import com.twittelonr.homelon_mixelonr.param.HomelonMixelonrInjelonctionNamelons.UselonrFollowelondTopicIdsRelonpository
import com.twittelonr.homelon_mixelonr.param.HomelonMixelonrInjelonctionNamelons.UtelongSocialProofRelonpository
import com.twittelonr.homelon_mixelonr.util.elonarlybird.elonarlybirdRelonquelonstUtil
import com.twittelonr.homelon_mixelonr.util.twelonelontypielon.RelonquelonstFielonlds
import com.twittelonr.injelonct.TwittelonrModulelon
import com.twittelonr.intelonrelonsts.{thriftscala => int}
import com.twittelonr.product_mixelonr.sharelond_library.melonmcachelond_clielonnt.MelonmcachelondClielonntBuildelonr
import com.twittelonr.product_mixelonr.sharelond_library.thrift_clielonnt.FinaglelonThriftClielonntBuildelonr
import com.twittelonr.product_mixelonr.sharelond_library.thrift_clielonnt.Idelonmpotelonnt
import com.twittelonr.reloncos.reloncos_common.{thriftscala => rc}
import com.twittelonr.reloncos.uselonr_twelonelont_elonntity_graph.{thriftscala => utelong}
import com.twittelonr.selonarch.elonarlybird.{thriftscala => elonb}
import com.twittelonr.selonrvo.cachelon.Cachelond
import com.twittelonr.selonrvo.cachelon.CachelondSelonrializelonr
import com.twittelonr.selonrvo.cachelon.FinaglelonMelonmcachelonFactory
import com.twittelonr.selonrvo.cachelon.MelonmcachelonCachelonFactory
import com.twittelonr.selonrvo.cachelon.NonLockingCachelon
import com.twittelonr.selonrvo.cachelon.ThriftSelonrializelonr
import com.twittelonr.selonrvo.kelonyvaluelon.KelonyValuelonRelonsultBuildelonr
import com.twittelonr.selonrvo.relonpository.CachingKelonyValuelonRelonpository
import com.twittelonr.selonrvo.relonpository.ChunkingStratelongy
import com.twittelonr.selonrvo.relonpository.KelonyValuelonRelonpository
import com.twittelonr.selonrvo.relonpository.KelonyValuelonRelonsult
import com.twittelonr.selonrvo.relonpository.kelonysAsQuelonry
import com.twittelonr.spam.rtf.{thriftscala => sp}
import com.twittelonr.twelonelontypielon.{thriftscala => tp}
import com.twittelonr.util.Futurelon
import com.twittelonr.util.Relonturn
import javax.injelonct.Namelond
import javax.injelonct.Singlelonton
import org.apachelon.thrift.protocol.TCompactProtocol

objelonct ThriftFelonaturelonRelonpositoryModulelon elonxtelonnds TwittelonrModulelon {

  privatelon val DelonfaultRPCChunkSizelon = 50
  privatelon val GFSIntelonractionIdsLimit = 10

  typelon elonarlybirdQuelonry = (Selonq[Long], Long)
  typelon UtelongQuelonry = (Selonq[Long], (Long, Map[Long, Doublelon]))

  @Providelons
  @Singlelonton
  @Namelond(IntelonrelonstsThriftSelonrvicelonClielonnt)
  delonf providelonsIntelonrelonstsThriftSelonrvicelonClielonnt(
    clielonntId: ClielonntId,
    selonrvicelonIdelonntifielonr: SelonrvicelonIdelonntifielonr,
    statsReloncelonivelonr: StatsReloncelonivelonr
  ): int.IntelonrelonstsThriftSelonrvicelon.MelonthodPelonrelonndpoint = {
    FinaglelonThriftClielonntBuildelonr
      .buildFinaglelonMelonthodPelonrelonndpoint[
        int.IntelonrelonstsThriftSelonrvicelon.SelonrvicelonPelonrelonndpoint,
        int.IntelonrelonstsThriftSelonrvicelon.MelonthodPelonrelonndpoint](
        selonrvicelonIdelonntifielonr = selonrvicelonIdelonntifielonr,
        clielonntId = clielonntId,
        delonst = "/s/intelonrelonsts-thrift-selonrvicelon/intelonrelonsts-thrift-selonrvicelon",
        labelonl = "intelonrelonsts",
        statsReloncelonivelonr = statsReloncelonivelonr,
        idelonmpotelonncy = Idelonmpotelonnt(1.pelonrcelonnt),
        timelonoutPelonrRelonquelonst = 100.milliselonconds,
        timelonoutTotal = 100.milliselonconds
      )
  }

  @Providelons
  @Singlelonton
  @Namelond(UselonrFollowelondTopicIdsRelonpository)
  delonf providelonsUselonrFollowelondTopicIdsRelonpository(
    @Namelond(IntelonrelonstsThriftSelonrvicelonClielonnt) clielonnt: int.IntelonrelonstsThriftSelonrvicelon.MelonthodPelonrelonndpoint
  ): KelonyValuelonRelonpository[Selonq[Long], Long, Selonq[Long]] = {

    val lookupContelonxt = Somelon(
      int.elonxplicitIntelonrelonstLookupContelonxt(Somelon(Selonq(int.IntelonrelonstRelonlationTypelon.Followelond)))
    )

    delonf lookup(uselonrId: Long): Futurelon[Selonq[Long]] = {
      clielonnt.gelontUselonrelonxplicitIntelonrelonsts(uselonrId, lookupContelonxt).map { intelonrelonsts =>
        intelonrelonsts.flatMap {
          _.intelonrelonstId match {
            caselon int.IntelonrelonstId.SelonmanticCorelon(selonmanticCorelonIntelonrelonst) => Somelon(selonmanticCorelonIntelonrelonst.id)
            caselon _ => Nonelon
          }
        }
      }
    }

    val kelonyValuelonRelonpository = toRelonpository(lookup)

    kelonyValuelonRelonpository
  }

  @Providelons
  @Singlelonton
  @Namelond(UtelongSocialProofRelonpository)
  delonf providelonsUtelongSocialProofRelonpository(
    clielonntId: ClielonntId,
    selonrvicelonIdelonntifielonr: SelonrvicelonIdelonntifielonr,
    statsReloncelonivelonr: StatsReloncelonivelonr
  ): KelonyValuelonRelonpository[UtelongQuelonry, Long, utelong.TwelonelontReloncommelonndation] = {
    val clielonnt = FinaglelonThriftClielonntBuildelonr.buildFinaglelonMelonthodPelonrelonndpoint[
      utelong.UselonrTwelonelontelonntityGraph.SelonrvicelonPelonrelonndpoint,
      utelong.UselonrTwelonelontelonntityGraph.MelonthodPelonrelonndpoint](
      selonrvicelonIdelonntifielonr = selonrvicelonIdelonntifielonr,
      clielonntId = clielonntId,
      delonst = "/s/cassowary/uselonr_twelonelont_elonntity_graph",
      labelonl = "utelong-social-proof-relonpo",
      statsReloncelonivelonr = statsReloncelonivelonr,
      idelonmpotelonncy = Idelonmpotelonnt(1.pelonrcelonnt),
      timelonoutPelonrRelonquelonst = 150.milliselonconds,
      timelonoutTotal = 250.milliselonconds
    )

    val utelongSocialProofTypelons = Selonq(
      rc.SocialProofTypelon.Favoritelon,
      rc.SocialProofTypelon.Relontwelonelont,
      rc.SocialProofTypelon.Relonply
    )

    delonf lookup(
      twelonelontIds: Selonq[Long],
      vielonw: (Long, Map[Long, Doublelon])
    ): Futurelon[Selonq[Option[utelong.TwelonelontReloncommelonndation]]] = {
      val (uselonrId, selonelondsWithWelonights) = vielonw
      val socialProofRelonquelonst = utelong.SocialProofRelonquelonst(
        relonquelonstelonrId = Somelon(uselonrId),
        selonelondsWithWelonights = selonelondsWithWelonights,
        inputTwelonelonts = twelonelontIds,
        socialProofTypelons = Somelon(utelongSocialProofTypelons)
      )
      clielonnt.findTwelonelontSocialProofs(socialProofRelonquelonst).map { relonsult =>
        val relonsultMap = relonsult.socialProofRelonsults.map(t => t.twelonelontId -> t).toMap
        twelonelontIds.map(relonsultMap.gelont)
      }
    }

    toRelonpositoryBatchWithVielonw(lookup, chunkSizelon = 200)
  }

  @Providelons
  @Singlelonton
  @Namelond(TwelonelontypielonContelonntRelonpository)
  delonf providelonsTwelonelontypielonContelonntRelonpository(
    clielonntId: ClielonntId,
    selonrvicelonIdelonntifielonr: SelonrvicelonIdelonntifielonr,
    statsReloncelonivelonr: StatsReloncelonivelonr
  ): KelonyValuelonRelonpository[Selonq[Long], Long, tp.Twelonelont] = {
    val clielonnt = FinaglelonThriftClielonntBuildelonr
      .buildFinaglelonMelonthodPelonrelonndpoint[
        tp.TwelonelontSelonrvicelon.SelonrvicelonPelonrelonndpoint,
        tp.TwelonelontSelonrvicelon.MelonthodPelonrelonndpoint](
        selonrvicelonIdelonntifielonr = selonrvicelonIdelonntifielonr,
        clielonntId = clielonntId,
        delonst = "/s/twelonelontypielon/twelonelontypielon",
        labelonl = "twelonelontypielon-contelonnt-relonpo",
        statsReloncelonivelonr = statsReloncelonivelonr,
        idelonmpotelonncy = Idelonmpotelonnt(1.pelonrcelonnt),
        timelonoutPelonrRelonquelonst = 150.milliselonconds,
        timelonoutTotal = 250.milliselonconds
      )

    delonf lookup(twelonelontIds: Selonq[Long]): Futurelon[Selonq[Option[tp.Twelonelont]]] = {
      val gelontTwelonelontFielonldsOptions = tp.GelontTwelonelontFielonldsOptions(
        twelonelontIncludelons = RelonquelonstFielonlds.ContelonntFielonlds,
        includelonRelontwelonelontelondTwelonelont = falselon,
        includelonQuotelondTwelonelont = falselon,
        forUselonrId = Nonelon,
        // Selonrvicelon nelonelonds to belon whitelonlistelond
        // Welon relonly on thelon VF at thelon elonnd of selonrving. No nelonelond to filtelonr now.
        safelontyLelonvelonl = Somelon(sp.SafelontyLelonvelonl.FiltelonrNonelon),
        visibilityPolicy = tp.TwelonelontVisibilityPolicy.NoFiltelonring
      )
      val relonquelonst = tp.GelontTwelonelontFielonldsRelonquelonst(
        twelonelontIds = twelonelontIds,
        options = gelontTwelonelontFielonldsOptions
      )
      clielonnt.gelontTwelonelontFielonlds(relonquelonst).map { relonsults =>
        relonsults.map {
          caselon tp.GelontTwelonelontFielonldsRelonsult(_, tp.TwelonelontFielonldsRelonsultStatelon.Found(found), _, _) =>
            Somelon(found.twelonelont)
          caselon _ => Nonelon
        }
      }
    }

    val kelonyValuelonRelonpository = toRelonpositoryBatch(lookup, chunkSizelon = 20)

    // Cachelon
    val cachelonClielonnt = MelonmcachelondClielonntBuildelonr.buildRawMelonmcachelondClielonnt(
      numTrielons = 1,
      relonquelonstTimelonout = 100.milliselonconds,
      globalTimelonout = 100.milliselonconds,
      connelonctTimelonout = 200.milliselonconds,
      acquisitionTimelonout = 200.milliselonconds,
      selonrvicelonIdelonntifielonr = selonrvicelonIdelonntifielonr,
      statsReloncelonivelonr = statsReloncelonivelonr
    )
    val finaglelonMelonmcachelonFactory =
      FinaglelonMelonmcachelonFactory(cachelonClielonnt, "/s/cachelon/homelon_contelonnt_felonaturelons:twelonmcachelons")
    val cachelonValuelonTransformelonr =
      nelonw ThriftSelonrializelonr[tp.Twelonelont](tp.Twelonelont, nelonw TCompactProtocol.Factory())
    val cachelondSelonrializelonr = CachelondSelonrializelonr.binary(cachelonValuelonTransformelonr)

    val cachelon = MelonmcachelonCachelonFactory(
      melonmcachelon = finaglelonMelonmcachelonFactory(),
      ttl = 48.hours
    )[Long, Cachelond[tp.Twelonelont]](cachelondSelonrializelonr)

    val lockingCachelon = nelonw NonLockingCachelon(cachelon)
    val cachelondKelonyValuelonRelonpository = nelonw CachingKelonyValuelonRelonpository(
      kelonyValuelonRelonpository,
      lockingCachelon,
      kelonysAsQuelonry[Long]
    )
    cachelondKelonyValuelonRelonpository
  }

  @Providelons
  @Singlelonton
  @Namelond(GraphTwoHopRelonpository)
  delonf providelonsGraphTwoHopRelonpository(
    clielonntId: ClielonntId,
    selonrvicelonIdelonntifielonr: SelonrvicelonIdelonntifielonr,
    statsReloncelonivelonr: StatsReloncelonivelonr
  ): KelonyValuelonRelonpository[(Selonq[Long], Long), Long, Selonq[gfs.IntelonrselonctionValuelon]] = {
    val clielonnt = FinaglelonThriftClielonntBuildelonr
      .buildFinaglelonMelonthodPelonrelonndpoint[gfs.Selonrvelonr.SelonrvicelonPelonrelonndpoint, gfs.Selonrvelonr.MelonthodPelonrelonndpoint](
        selonrvicelonIdelonntifielonr = selonrvicelonIdelonntifielonr,
        clielonntId = clielonntId,
        delonst = "/s/cassowary/graph_felonaturelon_selonrvicelon-selonrvelonr",
        labelonl = "gfs-relonpo",
        statsReloncelonivelonr = statsReloncelonivelonr,
        idelonmpotelonncy = Idelonmpotelonnt(1.pelonrcelonnt),
        timelonoutPelonrRelonquelonst = 350.milliselonconds,
        timelonoutTotal = 500.milliselonconds
      )

    delonf lookup(
      uselonrIds: Selonq[Long],
      vielonwelonrId: Long
    ): Futurelon[Selonq[Option[Selonq[gfs.IntelonrselonctionValuelon]]]] = {
      val gfsIntelonrselonctionRelonquelonst = gfs.GfsPrelonselontIntelonrselonctionRelonquelonst(
        uselonrId = vielonwelonrId,
        candidatelonUselonrIds = uselonrIds,
        prelonselontFelonaturelonTypelons = gfs.PrelonselontFelonaturelonTypelons.HtlTwoHop,
        intelonrselonctionIdLimit = Somelon(GFSIntelonractionIdsLimit)
      )

      clielonnt
        .gelontPrelonselontIntelonrselonction(gfsIntelonrselonctionRelonquelonst)
        .map { graphFelonaturelonSelonrvicelonRelonsponselon =>
          val relonsultMap = graphFelonaturelonSelonrvicelonRelonsponselon.relonsults
            .map(relonsult => relonsult.candidatelonUselonrId -> relonsult.intelonrselonctionValuelons).toMap
          uselonrIds.map(relonsultMap.gelont(_))
        }
    }

    toRelonpositoryBatchWithVielonw(lookup, chunkSizelon = 200)
  }

  @Providelons
  @Singlelonton
  @Namelond(elonarlybirdRelonpository)
  delonf providelonselonarlybirdSelonarchRelonpository(
    clielonnt: elonb.elonarlybirdSelonrvicelon.MelonthodPelonrelonndpoint,
    clielonntId: ClielonntId
  ): KelonyValuelonRelonpository[elonarlybirdQuelonry, Long, elonb.ThriftSelonarchRelonsult] = {

    delonf lookup(
      twelonelontIds: Selonq[Long],
      vielonwelonrId: Long
    ): Futurelon[Selonq[Option[elonb.ThriftSelonarchRelonsult]]] = {
      val relonquelonst = elonarlybirdRelonquelonstUtil.gelontTwelonelontselonBFelonaturelonsRelonquelonst(
        uselonrId = Somelon(vielonwelonrId),
        twelonelontIds = Somelon(twelonelontIds),
        clielonntId = Somelon(clielonntId.namelon)
      )

      clielonnt
        .selonarch(relonquelonst).map { relonsponselon =>
          val relonsultMap = relonsponselon.selonarchRelonsults
            .map(_.relonsults.map { relonsult => relonsult.id -> relonsult }.toMap).gelontOrelonlselon(Map.elonmpty)
          twelonelontIds.map(relonsultMap.gelont)
        }
    }
    toRelonpositoryBatchWithVielonw(lookup)
  }

  protelonctelond delonf toRelonpository[K, V](
    hydratelon: K => Futurelon[V]
  ): KelonyValuelonRelonpository[Selonq[K], K, V] = {
    delonf asRelonpository(kelonys: Selonq[K]): Futurelon[KelonyValuelonRelonsult[K, V]] = {
      Futurelon.collelonct(kelonys.map(hydratelon(_).liftToTry)).map { relonsults =>
        kelonys
          .zip(relonsults)
          .foldLelonft(nelonw KelonyValuelonRelonsultBuildelonr[K, V]()) {
            caselon (bldr, (k, relonsult)) =>
              relonsult match {
                caselon Relonturn(v) => bldr.addFound(k, v)
                caselon _ => bldr.addNotFound(k)
              }
          }.relonsult
      }
    }

    asRelonpository
  }

  protelonctelond delonf toRelonpositoryBatch[K, V](
    hydratelon: Selonq[K] => Futurelon[Selonq[Option[V]]],
    chunkSizelon: Int = DelonfaultRPCChunkSizelon
  ): KelonyValuelonRelonpository[Selonq[K], K, V] = {
    delonf relonpository(kelonys: Selonq[K]): Futurelon[KelonyValuelonRelonsult[K, V]] =
      batchRelonpositoryProcelonss(kelonys, hydratelon(kelonys))

    KelonyValuelonRelonpository.chunkelond(relonpository, ChunkingStratelongy.elonqualSizelon(chunkSizelon))
  }

  protelonctelond delonf toRelonpositoryBatchWithVielonw[K, T, V](
    hydratelon: (Selonq[K], T) => Futurelon[Selonq[Option[V]]],
    chunkSizelon: Int = DelonfaultRPCChunkSizelon
  ): KelonyValuelonRelonpository[(Selonq[K], T), K, V] = {
    delonf relonpository(input: (Selonq[K], T)): Futurelon[KelonyValuelonRelonsult[K, V]] = {
      val (kelonys, vielonw) = input
      batchRelonpositoryProcelonss(kelonys, hydratelon(kelonys, vielonw))
    }

    KelonyValuelonRelonpository.chunkelond(relonpository, CustomChunkingStratelongy.elonqualSizelonWithVielonw(chunkSizelon))
  }

  privatelon delonf batchRelonpositoryProcelonss[K, V](
    kelonys: Selonq[K],
    f: Futurelon[Selonq[Option[V]]]
  ): Futurelon[KelonyValuelonRelonsult[K, V]] = {
    f.liftToTry
      .map {
        caselon Relonturn(valuelons) =>
          kelonys
            .zip(valuelons)
            .foldLelonft(nelonw KelonyValuelonRelonsultBuildelonr[K, V]()) {
              caselon (bldr, (k, valuelon)) =>
                valuelon match {
                  caselon Somelon(v) => bldr.addFound(k, v)
                  caselon _ => bldr.addNotFound(k)
                }
            }.relonsult
        caselon _ =>
          kelonys
            .foldLelonft(nelonw KelonyValuelonRelonsultBuildelonr[K, V]()) {
              caselon (bldr, k) => bldr.addNotFound(k)
            }.relonsult
      }
  }

  // Uselon only for caselons not alrelonady covelonrelond by Selonrvo's [[ChunkingStratelongy]]
  objelonct CustomChunkingStratelongy {
    delonf elonqualSizelonWithVielonw[K, T](maxSizelon: Int): ((Selonq[K], T)) => Selonq[(Selonq[K], T)] = {
      caselon (kelonys, vielonw) =>
        ChunkingStratelongy
          .elonqualSizelon[K](maxSizelon)(kelonys)
          .map { chunk: Selonq[K] => (chunk, vielonw) }
    }
  }
}
